Bug fix for editors that get hidden by the top bar.

--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -32,6 +32,7 @@ ul {
 .container {
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 100px;
   max-width: 850px;
 }
 
